<resources>
    <string name="app_name">HealthKeeper</string>
    <string name="delete">YES</string>
    <string name="dialog_delete_title">Log Out</string>
    <string name="dialog_delete_msg">Do you want to log out of the app?</string>
    <string name="cancel">NO</string>
    <string name="dialog_cancel_title">Are you sure to cancel this edit? </string>
    <string name="dialog_cancel_msg">Your unsaved edit will be discarded if you click YES</string>
    <string name="add_the_custom_food_manually"><u><i>Add custom food.</i></u></string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>

    <string name="dialog_delete_title_2">Delete an item</string>
    <string name="dialog_delete_msg_2">Do you want to delete this item?</string>
    <string name="delete_2">YES</string>
    <string name="cancel_2">NO</string>

    <string name="Manual_dialog_confirm">The food has added successfully. </string>
    <string name="Manual_check_healthReport">check today Health Report</string>
    <string name="Manual_check_healthReport_btn">GO</string>
    <string name="the_food_name_does_not_match_try_this">*The food name does not match? Try this:</string>
    <string name="food_category">Food Category:</string>
    <string name="e_g_1">e.g. 1</string>
    <string name="food_quantity">Food Quantity:</string>
    <string name="confirm">Confirm</string>
    <string name="add_food_manually">Add Food Manually</string>
    <string name="custom_alert">*In order to avoid confusion in the food record data,\n custom food can not be changed after creation.</string>
    <string name="custom_alert_2">*Intake indicates the total number of calories you have consumed so far.</string>
    <string name="custom_alert_3">*Details Information indicates the amount of each nutrient in the food you are eating (this content
        standard is scientifically based).</string>
    <string name="fat">Fat:</string>
    <string name="carbohydrate">Carbohydrate:</string>
    <string name="gram">gram</string>
    <string name="protein">Protein:</string>
    <string name="details_information">Details Information</string>
    <string name="e_g_100_kilocalorie">e.g. 100 kilocalorie</string>
    <string name="food_calorie">Food Calorie:</string>
    <string name="e_g_hamburger">e.g. Hamburger</string>
    <string name="required_information">Required Information</string>
    <string name="save">Save</string>
    <string name="add_custom_food">Add Custom Food</string>
    <string name="food_recognition">Food Recognition</string>
    <string name="check_information">Check Information</string>
    <string name="please_confirm_the_following_information">Please confirm the following information.</string>
    <string name="food_photo">Food Photo:</string>
    <string name="food_name">Food Name:</string>
    <string name="_1">1</string>
    <string name="please_choose_food_category">*Please choose food category.</string>
    <string name="you_can_change_it_by_clicking_on_it_if_there_are_any_errors">You can change it by clicking on it, if there are any errors.</string>
    <string name="add_meal">Add meal</string>
    <string name="intake">Intake</string>
    <string name="your_can_still_intake">Your can still intake : </string>
    <string name="kilojoules">kilojoules</string>
    <string name="recommended_intake">Recommended intake : </string>
    <string name="healthkeeper">HealthKeeper</string>
    <string name="slogan">Eat healthy, live better.</string>
    <string name="health_report">Health Report</string>
    <string name="calorie">calorie</string>
    <string name="nutrient">nutrient</string>
    <string name="my_weight">My Weight</string>
    <string name="current_weight">Current weight</string>
    <string name="kg">kg</string>
    <string name="lean">Lean</string>
    <string name="_53_5kg">53.5kg</string>
    <string name="normal">Normal</string>
    <string name="_59_5kg">59.5kg</string>
    <string name="current_bmi">Current BMI</string>
    <string name="over">Over-</string>
    <string name="weight">weight</string>
    <string name="obesity">Obesity</string>
    <string name="calorie_today">Calorie (Today)</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack_other">Snack/Other</string>
    <string name="food_intake_today">Food intake (Today)</string>
    <string name="diversity">diversity</string>
    <string name="energy">Energy</string>
    <string name="calorie_with">(Calorie)</string>
    <string name="food">Food</string>
    <string name="nutrient_today">Nutrient (Today)</string>
    <string name="nutrient2">Nutrient</string>
    <string name="total">Total</string>
    <string name="goal">Goal</string>
    <string name="puls">[+/-]</string>
    <string name="energy_calorie">Energy (Calorie)</string>
    <string name="protein_gram">Protein (gram)</string>
    <string name="carbohydrate_gram">Carbohydrate (gram)</string>
    <string name="fat_gram">Fat (gram)</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="what_s_your_email_address">What\'s your email address?</string>
    <string name="email">Email</string>
    <string name="reset">Reset</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="password">Password</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="sign_in">Sign in</string>
    <string name="do_not_have_account_sign_up">Do not have account? Sign up!</string>
    <string name="email_not_verfied">Email Not Verfied !</string>
    <string name="verify_now">Verify Now</string>
    <string name="please_sign_up">Please Sign Up</string>
    <string name="username">Username</string>
    <string name="security_question">Security Question:</string>
    <string name="what_is_your_favourite_movie">What is your favourite movie?</string>
    <string name="answer">Answer</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_instead2">sign in instead</string>
    <string name="now_kg">Now (Kg)</string>
    <string name="bmi">BMI</string>
    <string name="health_report2"><![CDATA[Health Report >>]]></string>
    <string name="what_s_your_gender">What\'s your gender?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="what_s_your_height">What\'s your height?</string>
    <string name="_170_0cm">170.0cm</string>
    <string name="next">Next</string>
    <string name="what_is_your_age">What is your age?</string>
    <string name="_24_years_old">24 (years old)</string>
    <string name="what_is_your_weight">What is your weight?</string>
    <string name="_50kg">50kg</string>
    <string name="click_to_start">click to start</string>
    <string name="my_profile">My Profile</string>
    <string name="right"><![CDATA[>>]]></string>
    <string name="log_out">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_name">My Name</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight2">Weight</string>
    <string name="age">Age</string>
    <string name="image_processing">Image Processing</string>
    <string name="predicted_weight">Predicted weight</string>
    <string name="you_can_long_click_the_record_to_delete_it">*You can long click the record to delete it.</string>
    <string name="other_snack">Other/Snack</string>
    <string name="review_today">Review Today</string>
    <string name="status_means_you_can_eat_more">*status + means you can eat more;</string>
    <string name="means_you_need_to_eat_less">- means you need to eat less.</string>
    <string name="food_recognition_fail_title">Sorry, Food Recognition failed.</string>
    <string name="food_recognition_fail_content">Did you get the right food? Please try again or input manually.</string>
</resources>