<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#83cbac">

        <LinearLayout
            android:id="@+id/ll_add_food_photo_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/icon_cancel"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/food_recognition"
            android:textColor="#fff"
            android:textSize="25sp" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_add_food_photo_confirm"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/btn_confirm"
                android:textColor="#fff"
                android:text="@string/confirm" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_information"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_confirm_the_following_information"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:textStyle="italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_photo"
                android:textSize="20sp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageView
                android:id="@+id/add_food_display_photo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:padding="5dp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorGrey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_name"
                android:textSize="20sp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/photo_add_food_name"
                android:gravity="right"
                android:layout_marginEnd="20dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@null"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorGrey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_quantity"
                android:textSize="20sp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/photo_add_food_quantity"
                android:layout_marginEnd="20dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:background="@null"
                android:hint="@string/_1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorGrey" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_category"
                android:textSize="20sp"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Spinner
                android:gravity="right"
                android:id="@+id/photo_add_food_category"
                android:layout_marginEnd="20dp"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorGrey" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:textStyle="italic"
        android:text="@string/please_choose_food_category"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="20dp"
        android:textStyle="italic"
        android:text="@string/you_can_change_it_by_clicking_on_it_if_there_are_any_errors"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorGrey" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:textStyle="italic"
            android:text="@string/the_food_name_does_not_match_try_this"/>
        <Button
            android:id="@+id/btn_add_custom_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/add_the_custom_food_manually"
            android:textColor="@color/colorMint"
            android:background="@null"/>
    </LinearLayout>
</LinearLayout>